--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
             "email": "paul.hage@atabix.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+	"autoload": {
+        "psr-0": {
+            "Atabix": "Atabix/",
+            "Atabix\\Core": "Atabix/Core",
+            "Atabix\\Core\\Exceptions": "Atabix/Core/Exceptions"
+        }
+    }
 }
